force-app/main/default/objects/Responsible_Party__c/Responsible_Party__c.object-meta.xml
<CustomObject>
    <label>Responsible Party</label>
    <nameField>
        <displayFormat>RPN-{0000}</displayFormat>
        <label>Responsible Party</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Responsible Party</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>