force-app/main/default/objects/Responsible_Party__c/fields/Actions_Taken__c.field-meta.xml
<CustomField>
    <fullName>Actions_Taken__c</fullName>
    <label>Actions Taken</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Additional Training Complete</fullName>
            </value>
            <value>
                <fullName>Email Follow-Up with Agent Complete</fullName>
            </value>
            <value>
                <fullName>Verbal Follow-Up With Agent Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>