force-app/main/default/objects/Responsible_Party__c/fields/Link_to_Case__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Case__c</fullName>
    <formula>&quot;https://na68.salesforce.com/&quot; +  RelatedCase__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link to Case</label>
    <type>Text</type>
</CustomField>