force-app/main/default/objects/Responsible_Party__c/fields/Related_Incident_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Related_Incident_Date_Time__c</fullName>
    <formula>RelatedCase__r.Incident_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Incident Date/Time</label>
    <type>DateTime</type>
</CustomField>