force-app/main/default/objects/Responsible_Party__c/fields/RelatedCase__c.field-meta.xml
<CustomField>
    <fullName>RelatedCase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Responsible Party</relationshipLabel>
    <relationshipName>Responsible_Party</relationshipName>
    <type>Lookup</type>
</CustomField>