force-app/main/default/objects/Responsible_Party__c/fields/Responsible_Party_Name__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Party_Name__c</fullName>
    <label>Responsible Party&apos;s Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>