force-app/main/default/objects/Responsible_Party__c/fields/Responsible_Party_s_Region__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Party_s_Region__c</fullName>
    <label>Responsible Party&apos;s Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>