force-app/main/default/objects/Responsible_Party__c/fields/Who_Took_Action__c.field-meta.xml
<CustomField>
    <fullName>Who_Took_Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Who Took Action?</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Responsible_Party</relationshipName>
    <type>Lookup</type>
</CustomField>